[gd_scene format=3 uid="uid://bmprloh75j06"]

[ext_resource type="Script" uid="uid://cfwf100fmea46" path="res://Game/Ui/game_ui.gd" id="1_pjk1m"]
[ext_resource type="Texture2D" uid="uid://cu532q23ccxui" path="res://Assets/ProgrammerArt__ProgressUnder.png" id="2_47yhi"]
[ext_resource type="Texture2D" uid="uid://b40cu08tbu7o" path="res://Assets/ProgrammerArt__ProgressOver.png" id="3_wlq61"]
[ext_resource type="Texture2D" uid="uid://voek72lu102g" path="res://Assets/ProgrammerArt__ProgressRed.png" id="4_vtlts"]
[ext_resource type="FontFile" uid="uid://3rv7pk32ilcw" path="res://Assets/Fonts/Candy Beans.otf" id="5_3bj3t"]
[ext_resource type="Texture2D" uid="uid://7jhfanvregga" path="res://Assets/ProgrammerArt__ProgressGreen.png" id="6_dhkw6"]

[sub_resource type="Gradient" id="Gradient_3bj3t"]
offsets = PackedFloat32Array(0.6573427, 1)
colors = PackedColorArray(1, 0, 0, 0, 1, 0, 0, 0.2901961)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cu33k"]
gradient = SubResource("Gradient_3bj3t")
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[node name="GameUi" type="CanvasLayer" unique_id=1360459017]
script = ExtResource("1_pjk1m")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=15512166]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="Control" parent="VBoxContainer" unique_id=911009148]
custom_minimum_size = Vector2(0, 38.705)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer" unique_id=591781538]
layout_mode = 0
offset_right = 268.0
offset_bottom = 68.0

[node name="HealthBar" type="TextureProgressBar" parent="VBoxContainer/HBoxContainer/VBoxContainer" unique_id=1993686910]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
value = 50.0
nine_patch_stretch = true
stretch_margin_left = 15
stretch_margin_top = 15
stretch_margin_right = 15
stretch_margin_bottom = 15
texture_under = ExtResource("2_47yhi")
texture_over = ExtResource("3_wlq61")
texture_progress = ExtResource("4_vtlts")

[node name="HealthLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HealthBar" unique_id=864519401]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -15.0
offset_right = 28.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("5_3bj3t")
theme_override_font_sizes/font_size = 22
text = "30/30"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExpBar" type="TextureProgressBar" parent="VBoxContainer/HBoxContainer/VBoxContainer" unique_id=513338522]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3
value = 49.0
nine_patch_stretch = true
stretch_margin_left = 15
stretch_margin_top = 15
stretch_margin_right = 15
stretch_margin_bottom = 15
texture_under = ExtResource("2_47yhi")
texture_over = ExtResource("3_wlq61")
texture_progress = ExtResource("6_dhkw6")

[node name="ExpLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/ExpBar" unique_id=2093757014]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.5
offset_top = -15.0
offset_right = 24.5
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"ProgressLabel"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 17
theme_override_font_sizes/font_size = 22
text = "0/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WaveLabel" type="Label" parent="VBoxContainer/HBoxContainer" unique_id=1714083808]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -43.0
offset_right = 43.0
offset_bottom = 27.0
grow_horizontal = 2
size_flags_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 32
theme_override_constants/outline_size = 14
theme_override_constants/shadow_outline_size = 50
theme_override_font_sizes/font_size = 20
text = "WAVE 12"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="VBoxContainer/HBoxContainer" unique_id=28793160]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_top = 39.0
offset_right = 24.0
offset_bottom = 79.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 32
theme_override_constants/outline_size = 14
theme_override_constants/shadow_outline_size = 50
theme_override_font_sizes/font_size = 30
text = "10.5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelsGained" type="HBoxContainer" parent="VBoxContainer/HBoxContainer" unique_id=938525333]
unique_name_in_owner = true
layout_mode = 0
offset_left = 155.0
offset_top = 39.0
offset_right = 357.0
offset_bottom = 68.0

[node name="HurtOverlay" type="TextureRect" parent="." unique_id=375065571]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_cu33k")
